bat.bool1.in1020.In1020.scala.error
Compilation error:
In1020: error: Unmatched closing brace '}' ignored here
  }
  ^In1020:21: error: ';' expected but 'else' found.
    }else {
     ^In1020:27: error: Unmatched closing brace '}' ignored here
}
^