bat.bool1.in1020.In1020.scala.code
def in1020(a:Int, b:Int):Boolean = {
  if (b < 10) {
    if (a<10) {
      return false
      
    }else if (a>20) {
      return false
    }else {
      return true
    }
  }else if (b>20) {
    if (a<10) {
      return false
      
    }else if (a>20) {
      return false
    }else {
      return true
    }
    }
  	}else {
      return true
    }
	}
}